# c_Nikiforov_Geometry3D

./: .gitignore  CMakeLists.txt  README.md  computeGeometry3d.c  computeGeometry3d.h  line3d.c  line3d.h  main.c  matrix.c  matrix.h  plane3d.c  plane3d.h  point3d.c  point3d.h  pyramid3d.c  pyramid3d.h  segment3d.c  segment3d.h  triangle3D.c  triangle3D.h  vector3d.c  vector3d.h
